# mnist-digit-gen

./: .gitignore  Dockerfile  README.MD  homework1.md  pyproject.toml
number_generator/: __init__.py  __main__.py  api.py  cli.py  functionality.py
number_generator/api/: api.py  api_models.py
number_generator/cli/: cli.py
number_generator/script/: dataload.py  generate.py  imageprocessor.py
tests/: test_cli.py  test_functionality.py
