[tool.poetry]
name = "number_generator"
version = "0.1.0"
description = "A simple number sequence generator in python"
authors = ["Trevor Wieland <trevor_wieland@mac.com>"]
readme = "README.MD"

[tool.poetry.scripts]
number-generator = "number_generator.cli:app"

[tool.poetry.dependencies]
python = "^3.6"
typer = {extras = ["all"], version = "^0.4.0"}
numpy = "1.19.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
